			  expression for a custom converter? 
		- Thinking .WithTypeConverter is a better option and more readable. Perhaps an api like the following
			- .AppendField(x => x.id, fieldLength).WithTypeConverter<StringConverter>()
			- signature: IFlatFileLayoutDescriptor<TTarget> WithTypeConverter<TTypeConverter>();
	- Polyfilled C# 6 safe equals method in DummyStringModel. Unit tests pass, can now build in C# 6 / VS 2015


6-13-18 - Code Review Comments
	1. Leave ParseFile's return type as ICollection. Don't switch to IEnumerable, since we use the "Add" method internally. 
		- Remove class level generic TFile
		- Just return an ICollection (already in place) of type TEntity in ParseFile
			- e.g. Interface for ParseFile is simply ICollection<T> ParseFile. Not TFile (that allows ICollection to be any type via a second generic)
		- DONE
	2. ParseFile implementation is good. 
		- +1 on reading line by line via the stream. ReadLine from stream preferable over ReadAllLines, so whole file isn't in memory
	3. Cache OrderedFields either in LayoutDescriptor, or in a variable above the loop in GetModelFromLine
		- DONE
			- Thought best to cache in LayoutDescriptor, in so cached for any others calls to get ordered fields going forward. 
			- Saved as class level field. Marked this dirty in the Add method, so recalculated after field is appended
*		- LEE - should this be a public property instead of a method? 
	4. Remove tentative WithLayoutDescriptor extension method in FlatFileLayoutDescriptor. 
		- Implement type converter by convention for primitive types, then go from there w/ the api. 
			- ********* RESUME HERE ********* 
			- Implement convention based type converter for primitive types. Use built in parse or tryparse methods. 
			  Use type in existing PropertyInfo, don't make user pass in the type a second time. 
				- Remember, DateTime is NOT a primitive type :)
			- As a rule of thumb, favor CONVENTION over CONFIGURATION.