@@ -53,8 +53,9 @@
     <Compile Include="Infrastructure\Mocks\DummyFixedWidthFileParser.cs" />
     <Compile Include="Models\PrimitiveTypes.cs" />
     <Compile Include="Models\DummyStringModel.cs" />
-    <Compile Include="Tests\FixedWidthParser\StringTests.cs" />
-    <Compile Include="Tests\LayoutDescriptor\TypeConverterTests.cs" />
+    <Compile Include="Tests\FixedWidthParser\StringTest.cs" />
+    <Compile Include="Tests\LayoutDescriptor\ParserTestBase.cs" />
+    <Compile Include="Tests\LayoutDescriptor\PrimitiveTypesTest.cs" />
     <Compile Include="Tests\LayoutDescriptor\LayoutDescriptorExpressionTests.cs" />
     <Compile Include="Infrastructure\FixedLayout\FixedFootballLayout.cs" />
     <Compile Include="Models\FootballScore.cs" />
