@@ -18,31 +18,7 @@ namespace FlatFileParserUnitTests.Infrastructure.Mocks
         // Lee - would 'GetParsedFile' be a better method name? 
         public ICollection<TEntity> ParseFile()
         {
-            // Hardcoding a test set for now
-            if (typeof(TEntity) == typeof(PrimitiveTypes))
-            {
-                var rows = new Collection<PrimitiveTypes>
-                {
-                    new PrimitiveTypes
-                    {
-                        id = 0,
-                        charTest = 'a',
-                        stringTest = "string1",
-                        boolTest = true,
-                        doubleTest = 42
-                    },
-                    new PrimitiveTypes
-                    {
-                        id = 1,
-                        charTest = 'b',
-                        stringTest = "string2",
-                        boolTest = false,
-                        doubleTest = 36
-                    }
-                };
-                return (ICollection<TEntity>) rows;
-            }
-
+            
             return null;
         }
     }
