@@ -1,8 +1,8 @@
 ﻿namespace FlatFileParserUnitTests.Models
 {
-    internal class PrimitiveTypes
+    public class PrimitiveTypes
     {
-        public int id { get; set; } 
+        public int id { get; set; }
         public bool boolTest { get; set; }
         public string stringTest { get; set; }
         public double doubleTest { get; set; }
