@@ -104,7 +104,7 @@
 	- Polyfilled C# 6 safe equals method in DummyStringModel. Unit tests pass, can now build in C# 6 / VS 2015
 
 
-6-13-18 - Code Review Comments
+6-27-18 - Code Review Comments
 	1. Leave ParseFile's return type as ICollection. Don't switch to IEnumerable, since we use the "Add" method internally. 
 		- Remove class level generic TFile
 		- Just return an ICollection (already in place) of type TEntity in ParseFile
@@ -124,3 +124,6 @@
 			  Use type in existing PropertyInfo, don't make user pass in the type a second time. 
 				- Remember, DateTime is NOT a primitive type :)
 			- As a rule of thumb, favor CONVENTION over CONFIGURATION.
+
+6-28-18
+	- Refactored unit tests. Shared patterns and parsing for string tests and primitive type tests
